--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               </div> 
           </section> 
           <section id="contacto"> 
-              <h2>Marcos Mendiola Jiménez</h2> 
+              <h2>Marcos MJ</h2> 
               <p>Para más información, puedes contactarme a través del siguiente correo electrónico: marcos.jimenez1@ukuepa.com</p> 
           </section> 
       </main> 
